--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   glassfish:
     build: .
@@ -14,20 +12,17 @@ services:
       - DB_NAME=desafiotec
       - DB_USER=postgres
       - DB_PASSWORD=password
-    volumes:
-      - glassfish_data:/glassfish5/glassfish/domains/domain1
 
   postgres:
     image: postgres:13
     environment:
-      - POSTGRES_DB=desafio
+      - POSTGRES_DB=desafiotec
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
 volumes:
   postgres_data:
-  glassfish_data:
