--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,22 @@
             <artifactId>javax.faces-api</artifactId>
             <version>2.3</version>
         </dependency>  
-         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
-        <dependency>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql 
+         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.2.17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.45.1.0</version>
+        </dependency>-->
+        
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <version>10.14.2.0</version>
         </dependency>
         <!-- Hibernate como implementação do JPA -->
         <dependency>
